Update Channel.java